Healthy homes changes

--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -47,7 +47,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3 col-sm-12 ml-auto">
+    <div class="col-md-3 col-sm-12">
 
       <div class="card content-card mb-2">
         <div class="card-content">
@@ -71,27 +71,27 @@
 
       <div class="card content-card mb-2">
         <div class="card-content">
-        <div class="card-body">
-          <p><span class="card-title text-primary h3">Prevent and get rid of mold </span></p>
-          <p>
-            <ul class="list-group">
-              <li class="list-group-item"><a href="https://www.nyc.gov/assets/doh/downloads/pdf/epi/prevent-and-get-rid-of-mold.pdf"> Mold prevention brochure </a>
-              <li class="list-group-item"><strong> NYC Healthy Neighborhood Programs </strong> <a href="https://www.nyc.gov/site/doh/health/health-topics/healthy-neighborhoods-asthma-triggers.page"> Request a free home assessment of asthma triggers </a>
-              <li class="list-group-item"><a href="https://www.nyc.gov/site/doh/health/health-topics/mold.page">Learn more about mold </a>
-            </ul>
-          </p>
-          
-        </div>
+          <div class="card-body">
+            <p><span class="card-title text-primary h3">Prevent and get rid of mold </span></p>
+            <p>
+              <ul class="list-group">
+                <li class="list-group-item"><a href="https://www.nyc.gov/assets/doh/downloads/pdf/epi/prevent-and-get-rid-of-mold.pdf"> Mold prevention brochure </a>
+                <li class="list-group-item"><strong> NYC Healthy Neighborhood Programs </strong> <a href="https://www.nyc.gov/site/doh/health/health-topics/healthy-neighborhoods-asthma-triggers.page"> Request a free home assessment of asthma triggers </a>
+                <li class="list-group-item"><a href="https://www.nyc.gov/site/doh/health/health-topics/mold.page">Learn more about mold </a>
+              </ul>
+            </p>
+            
+          </div>
         </div>
     </div>
 
     </div>
 
-    <div class="col-md-3 col-sm-12 mr-auto">
+    <div class="col-md-3 col-sm-12">
           <div class="card content-card mb-2">
             <div class="card-content">
             <div class="card-body">
-              <p><span class="card-title text-primary h3">Protect your family from lead poisoning and hazardous products </span></p>
+              <p><span class="card-title text-primary h3">Prevent poisoning from lead and hazardous products </span></p>
               <p>
                 <ul class="list-group">
                   <li class="list-group-item"><a href="nyc.gov/lead"> Visit NYC.gov/lead</a> and <a href="Nyc.gov/hazardousproducts">learn about which consumer products may contain lead </a>
@@ -105,6 +105,26 @@
             </div>
             </div>
         </div>
+    </div>
+
+    <div class="col-md-3 col-sm-12">
+
+      <div class="card content-card mb-2">
+        <div class="card-content">
+          <div class="card-body">
+            <p><span class="card-title text-primary h3">Prevent fires and carbon monoxide poisoning </span></p>
+            <p>
+              <ul class="list-group">
+                <li class="list-group-item"><a href="https://www.nyc.gov/assets/doh/downloads/pdf/epi/prevent-and-get-rid-of-mold.pdf"> Mold prevention brochure </a>
+                <li class="list-group-item"><strong> NYC Healthy Neighborhood Programs </strong> <a href="https://www.nyc.gov/site/doh/health/health-topics/healthy-neighborhoods-asthma-triggers.page"> Request a free home assessment of asthma triggers </a>
+                <li class="list-group-item"><a href="https://www.nyc.gov/site/doh/health/health-topics/mold.page">Learn more about mold </a>
+              </ul>
+            </p>
+            
+          </div>
+        </div>
+    </div>
+
     </div>
   </div>
 
@@ -205,14 +225,9 @@
             <h3 class="h5">What you can do</h3>
             <p>To get rid of pests and keep them from coming back, you have to deprive them of food, water, shelter and ways to get around.</p>
             <p>Seal pests out. Report gaps, cracks or holes and other conditions that can attract pests to building management. </p>
-            <p> If the repairs are not being made or you think that repair work is being done unsafely, call 311. </p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </p>
+            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
+            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
             
-            <h3 class="h5">Resources</h3>
-            <p><ul>
-                <li>For building residents</li>
-                <li>For owners, managers, and supers</li>
-                <li>To get rid of mold</li>
             </ul></p>  
         </div>
         <div class="modal-footer">
@@ -228,19 +243,13 @@
         <div class="modal-body">
             <h2 class="h4">Peeling paint</h2>
             <h3 class="h5">Why it's dangerous</h3>
-            <p>Water leaks and moisture issuess such as leaks, standing water, or moisture that won't dry can attract pests and cause mold growth.</p>
-            <p>Pests and mold can trigger or worsen asthma and allergies, and can create unsanitary conditions in the home.</p>
+            <p>Peeling or damaged paint can contain lead, especially in older buildings.</p>
+            <p>Lead can cause serious health effects. It is especially dangerous for children and pregnant people but can be harmful to anyone. </p>
             <h3 class="h5">What you can do</h3>
-            <p>Fix leaks and dry out damp areas, especially in kitchen and bathrooms, by opening a window or running a fan while showering or cooking. Use a dehumidifier to lower humidity levels in your home. Use water and detergent to clean mold on walls or other hard surfaces with small areas of mold.</p>
-            <p>Report mold, water leaks, and plumbing that needs fixing to building management. If leaks aren't fixed or you think that repair work is done unsafetly, call 311</p>
-            <p>NYCHA residents should call 718-707-7771 to report a maintenance problem.</p>
-            <p>If you or your child has asthma and there are pests or mold in your home, your health care provider or asthma case manager can make a referral to the Healthy Neighborhoods Program.</p>
-            <h3 class="h5">Resources</h3>
-            <p><ul>
-                <li>Resources one</li>
-                <li>Resource two</li>
-                <li>Resource three</li>
-            </ul></p>  
+            <p>Report peeling paint to your landlord. 
+            <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
+            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
+            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
