--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -45,6 +45,7 @@
 
 </div>
 
+<!-- Resource cards -->
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3 col-sm-12">
@@ -135,21 +136,35 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
+            <h2 class="h4">Pest droppings</h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>Cockroach and mouse droppings are a sign of pests and can worsen allergies and asthma symptoms.</p>
+            <h3 class="h5">What you can do</h3>
+            <p>To get rid of pests and keep them from coming back, deprive them of food, water, shelter and ways to get around.</p>
+            <p>Report gaps, cracks or holes and other conditions that can attract pests to building management.</p>
+            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
+            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="spillModal" tabindex="-1" role="dialog" aria-labelledby="spillDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
             <h2 class="h4">Moisture issues</h2>
             <h3 class="h5">Why it's dangerous</h3>
-            <p>Water leaks and moisture issuess such as leaks, standing water, or moisture that won't dry can attract pests and cause mold growth.</p>
-            <p>Pests and mold can trigger or worsen asthma and allergies, and can create unsanitary conditions in the home.</p>
+            <p>Water leaks and moisture issues such as leaks, standing water, or moisture that won't dry can attract pests and cause mold growth.</p>
+            <p>Pests and mold can trigger or worsen asthma and allergies, and can create unsanitary conditions.</p>
             <h3 class="h5">What you can do</h3>
-            <p>Fix leaks and dry out damp areas, especially in kitchen and bathrooms, by opening a window or running a fan while showering or cooking. Use a dehumidifier to lower humidity levels in your home. Use water and detergent to clean mold on walls or other hard surfaces with small areas of mold.</p>
-            <p>Report mold, water leaks, and plumbing that needs fixing to building management. If leaks aren't fixed or you think that repair work is done unsafetly, call 311</p>
-            <p>NYCHA residents should call 718-707-7771 to report a maintenance problem.</p>
-            <p>If you or your child has asthma and there are pests or mold in your home, your health care provider or asthma case manager can make a referral to the Healthy Neighborhoods Program.</p>
-            <h3 class="h5">Resources</h3>
-            <p><ul>
-                <li>Resources one</li>
-                <li>Resource two</li>
-                <li>Resource three</li>
-            </ul></p>  
+            <p>Keep your home dry by running a fan or opening a window. Use a dehumidifier to lower humidity levels. Use water and detergent to clean small areas of mold on walls or other hard surfaces.</p>
+            <p>Report, mold, water leaks and plumbing issues to building management.</p>  
+            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
+            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -164,19 +179,10 @@
         <div class="modal-body">
             <h2 class="h4">Open food</h2>
             <h3 class="h5">Why it's dangerous</h3>
-            <p>Water leaks and moisture issuess such as leaks, standing water, or moisture that won't dry can attract pests and cause mold growth.</p>
-            <p>Pests and mold can trigger or worsen asthma and allergies, and can create unsanitary conditions in the home.</p>
+            <p>Open food packages, pet food left out and garbage cans that don’t close tightly can attract roaches and mice. These pests can make asthma and allergy symptoms worse.</p>
             <h3 class="h5">What you can do</h3>
-            <p>Fix leaks and dry out damp areas, especially in kitchen and bathrooms, by opening a window or running a fan while showering or cooking. Use a dehumidifier to lower humidity levels in your home. Use water and detergent to clean mold on walls or other hard surfaces with small areas of mold.</p>
-            <p>Report mold, water leaks, and plumbing that needs fixing to building management. If leaks aren't fixed or you think that repair work is done unsafetly, call 311</p>
-            <p>NYCHA residents should call 718-707-7771 to report a maintenance problem.</p>
-            <p>If you or your child has asthma and there are pests or mold in your home, your health care provider or asthma case manager can make a referral to the Healthy Neighborhoods Program.</p>
-            <h3 class="h5">Resources</h3>
-            <p><ul>
-                <li>Resources one</li>
-                <li>Resource two</li>
-                <li>Resource three</li>
-            </ul></p>  
+            <p>Block access to food sources. 
+            <p>Clean up clutter, keep food in sealed containers, don’t leave pet food out, and store trash in a can with a tight-fitting lid. Rinse recyclables before sorting them.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -192,19 +198,11 @@
             <h2 class="h4">Mold</h2>
             <h3 class="h5">Why it's dangerous</h3>
             <p>Stains or visible mold growth on walls may be a sign of a moisture problem. </p>
-            <p>This needs to be fixed to stop mold from growing and causing or worsening allergies and asthma.</p>
+            <p>Mold can cause or worsen allergies and asthma.</p>
             <h3 class="h5">What you can do</h3>
             <p> Use water and soap (or dish detergent) to clean mold on walls or other hard surfaces. </p>
             <p> Fix leaks from faucets or pipes. </p>
-            <p> Report, mold, water leaks and plumbing issues to building management. If the leaks are not being fixed or you think that repair work is being done unsafely, call 311. </p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem </p>
-            <p> If you or your child has asthma and there are pests or mold in your home, your health care provider or asthma case manager can make a referral to the Healthy Neighborhoods Program. </p>
-            <h3 class="h5">Resources</h3>
-            <p><ul>
-                <li>Resources one</li>
-                <li>Resource two</li>
-                <li>Resource three</li>
-            </ul></p>  
+            <p> Report, mold, water leaks and plumbing issues to building management.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -245,6 +243,26 @@
             <h3 class="h5">Why it's dangerous</h3>
             <p>Peeling or damaged paint can contain lead, especially in older buildings.</p>
             <p>Lead can cause serious health effects. It is especially dangerous for children and pregnant people but can be harmful to anyone. </p>
+            <h3 class="h5">What you can do</h3>
+            <p>Report peeling paint to your landlord. 
+            <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
+            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
+            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+            <h2 class="h4">Dirty shoes kept indoors</h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>TBD</p>
             <h3 class="h5">What you can do</h3>
             <p>Report peeling paint to your landlord. 
             <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
