--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -46,7 +46,12 @@
 </div>
 
 <!-- Resource cards -->
+
+
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-11 mx-auto mb-2 pl-0"><h3> Learn more about keeping your home healthy</h3></div>
+    </div>
   <div class="row">
     <div class="col-md-3 col-sm-12">
 
