--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -24,7 +24,7 @@
 
 </article>
 
-<div class="bucket border px-4 my-4">
+<div class="bucket border px-4 my-2">
     <div>
         <img tabindex="0" class="superimpose" id="backgroundImage" alt="" src="background.svg" />
         <img tabindex="0" class="superimpose" id="spillOverlay" alt="" src="spill.svg" />
@@ -42,8 +42,9 @@
             <a id="peelingpaintDot" onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" ></a>
         </div>
     </div>
-
 </div>
+<div class="row ml-5"><p><em><small class="text-primary"> If repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>&nbsp;<p>NYCHA residents should call 718-707-7771 to report a maintenance problem.</em></small></p></div>
+
 
 <!-- Resource cards -->
 
@@ -52,6 +53,7 @@
   <div class="row">
     <div class="col-md-11 mx-auto mb-2 pl-0"><h3> Learn more about keeping your home healthy</h3></div>
     </div>
+    
   <div class="row">
     <div class="col-md-3 col-sm-12">
 
