modal content updates

--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -149,8 +149,6 @@
             <h3 class="h5">What you can do</h3>
             <p>To get rid of pests and keep them from coming back, deprive them of food, water, shelter and ways to get around.</p>
             <p>Report gaps, cracks or holes and other conditions that can attract pests to building management.</p>
-            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -170,8 +168,6 @@
             <h3 class="h5">What you can do</h3>
             <p>Keep your home dry by running a fan or opening a window. Use a dehumidifier to lower humidity levels. Use water and detergent to clean small areas of mold on walls or other hard surfaces.</p>
             <p>Report, mold, water leaks and plumbing issues to building management.</p>  
-            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -229,10 +225,7 @@
 
             <h3 class="h5">What you can do</h3>
             <p>To get rid of pests and keep them from coming back, you have to deprive them of food, water, shelter and ways to get around.</p>
-            <p>Seal pests out. Report gaps, cracks or holes and other conditions that can attract pests to building management. </p>
-            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
-            
+            <p>Seal pests out. Report gaps, cracks or holes and other conditions that can attract pests to building management.</p>    
             </ul></p>  
         </div>
         <div class="modal-footer">
@@ -253,8 +246,6 @@
             <h3 class="h5">What you can do</h3>
             <p>Report peeling paint to your landlord. 
             <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
-            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -269,12 +260,90 @@
         <div class="modal-body">
             <h2 class="h4">Dirty shoes kept indoors</h2>
             <h3 class="h5">Why it's dangerous</h3>
-            <p>TBD</p>
+            <p>Dust and debris from worksites can contain lead.
+            <p>Lead can cause serious health effects. It is especially dangerous for children and pregnant people but can be harmful to anyone.</p>
             <h3 class="h5">What you can do</h3>
-            <p>Report peeling paint to your landlord. 
+            <p>Remove dirty work shoes before entering your home. Keep your home clean. Wash floors, windowsills, hands and toys often.
             <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
-            <p><em><small class="text-primary"> If the repairs are not being made or you think that repair work is being done unsafely, call <strong>311.</strong></p>
-            <p> NYCHA residents should call 718-707-7771 to report a maintenance problem. </em></small></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+            <h2 class="h4">Using cold water from the sink to make baby formula </h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>Some buildings or homes may have lead pipes and plumbing fixtures. 
+            <p>When water comes in contact with old plumbing and pipes that contain lead, it can get into drinking water. Higher lead levels may be found when the water has not been used for several hours. Also, lead dissolves more easily into hot water. 
+            <p>Lead can cause serious health effects. It is especially dangerous for children and pregnant people but can be harmful to anyone.</p>
+            <h3 class="h5">What you can do</h3>
+            <p>Use only cold tap water to make baby formula and for drinking and cooking. Run your tap for at least 30 seconds, until the water is noticeably colder.
+            <p>NYC residents can call 311 to get a free lead test kit for drinking water. You will receive the results within 30 days of submitting the water sample.</p>
+            <p>Remind your provider to test your child for lead poisoning at ages 1 and 2 and ask about testing older children if you have peeling paint. Call 311 to find a provider.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+            <h2 class="h4">Cooking with traditional glazed ceramicware</h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>Traditional or handmade ceramicware from around the world can contain lead. 
+            <p>The lead can get into food and drink when these types of products are used to cook or store food and drinks.</p>
+            <p>Lead can cause serious health effects. It is especially dangerous for children and pregnant people but can be harmful to anyone.</p> 
+            <h3 class="h5">What you can do</h3>
+            <p>Do not use traditional or handmade glazed ceramic ware to prepare, cook, serve, or store food or drinks. These ceramic wares may contain high levels of lead.
+            <p>You can use these types of traditional ceramic ware for decoration. If you have used these products to prepare, cook, serve or store food, ask your doctor for a blood lead test. </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+            <h2 class="h4">Household cleaners, pesticides under the kitchen sink</h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>Common household products like bleach, ammonia, pest repellents, detergents, and more are poisonous and should be kept somewhere pets and children can’t reach.</p> 
+            <h3 class="h5">What you can do</h3>
+            <p>Keep harmful household products on a high shelf or in locked cabinet that children can’t reach.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+            <h2 class="h4">Smoke or carbon monoxide detectors that don’t work, need new batteries, or are located too close to the kitchen.</h2>
+            <h3 class="h5">Why it's dangerous</h3>
+            <p>Fire spreads fast and carbon monoxide (CO) is a colorless and odorless gas that can cause illness and sudden death.</p>
+            <p>70% of fire deaths have occurred in homes where there were no working smoke or CO detectors.</p>
+            <h3 class="h5">What you can do</h3>
+            <p>Ask your building owner to install a smoke and a CO detector in or near the sleeping areas of your home.
+            <p>Test your detector regularly by pressing the test button. Replace detectors every 10 years or when the detector signals that it has reached the end of life and needs to be replaced.
+            <p>Keep detector clean by regularly dusting or vacuuming.
+            <p>Do not put detectors within five feet of gas burning appliances such as stoves and dryers or near cooking areas.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
