add RMZ to geo references

--- a/themes/dohmh/layouts/data-explorer/data-index.html
+++ b/themes/dohmh/layouts/data-explorer/data-index.html
@@ -201,7 +201,7 @@
                     
                     // geographies
 
-                    const geos_order = ["Citywide", "Borough", "NYCKIDS2017", "NYCKIDS2019", "NYCKIDS2021", "UHF33", "UHF34", "UHF42", "Subboro", "CD", "CDTA", "NTA2010", "NTA2020"];
+                    const geos_order = ["Citywide", "Borough", "NYCKIDS2017", "NYCKIDS2019", "NYCKIDS2021", "UHF33", "UHF34", "UHF42", "Subboro", "CD", "CDTA", "NTA2010", "NTA2020", "RMZ"];
                     let unique_geographies = [...new Set(geographies)];
                     
                     // sorting unique_geographies based on order of geos_order
