--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -33,6 +33,8 @@
         <img tabindex="0" class="superimpose" id="crackinwallOverlay" alt="" src="crackinwall.svg" />
         <img tabindex="0" class="superimpose" id="peelingpaintOverlay" alt="" src="peelingpaint.svg" />
         <img tabindex="0" class="superimpose" id="smokedetector_1Overlay" alt="" src="smokedetector_1.svg" style="position:absolute;top: 3%;left: 25%;" />
+        <img tabindex="0" class="superimpose" id="stovespillOverlay" alt="" src="stovespill.svg" style="position:absolute;top: -8%;left: 23%;" />
+        <img tabindex="0" class="superimpose" id="shoesOverlay" alt="" src="shoes.svg" style="position:absolute;top: 10%;left: 25%;" />
 
 
         <div class="clickables">
@@ -41,7 +43,9 @@
             <a id="moldDot" onclick="mold()" aria-label="..." style="position:absolute;top: 40%;left: 39.5%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#moldModal" ></a>
             <a id="crackinwallDot" onclick="crackinwall()" aria-label="..." style="position:absolute;top: 40%;left: 30%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#crackinwallModal" ></a>
             <a id="peelingpaintDot" onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" ></a>
-            <a id="smokedetector_1Dot" onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 33%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#smokedetector_1Modal" ></a>
+            <a id="smokedetector_1Dot" onclick="smokedetector_1()" aria-label="..." style="position:absolute;top: 33%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#smokedetector_1Modal" ></a>
+            <a id="stovespillDot" onclick="stovespill()" aria-label="..." style="position:absolute;top: 50%;left: 50%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#stovespillModal" ></a>
+            <a id="shoesDot" onclick="shoes()" aria-label="..." style="position:absolute;top: 50%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#shoesModal" ></a>
         </div>
     </div>
 </div>
@@ -256,7 +260,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+  <div class="modal fade" id="shoesModal" tabindex="-1" role="dialog" aria-labelledby="shoesDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -388,6 +392,18 @@
     function smokedetector_1() {
       document.getElementById('smokedetector_1Overlay').classList.add('hide')
       document.getElementById('smokedetector_1Dot').classList.remove('dot-border')
+
+    }
+
+    function stovespill() {
+      document.getElementById('stovespillOverlay').classList.add('hide')
+      document.getElementById('stovespillDot').classList.remove('dot-border')
+
+    }
+
+    function shoes() {
+      document.getElementById('shoesOverlay').classList.add('hide')
+      document.getElementById('shoesDot').classList.remove('dot-border')
 
     }
 
