Change modal names

--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -145,7 +145,7 @@
 </div>
 
 <!-- Modals -->
-<div class="modal fade" id="spillModal" tabindex="-1" role="dialog" aria-labelledby="spillDot" aria-hidden="true">
+<div class="modal fade" id="pestdrop" tabindex="-1" role="dialog" aria-labelledby="pestdropDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -279,7 +279,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+  <div class="modal fade" id="bottleModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
