tz/feature-heat-story/layer-sections-and-colors - added new button area for maps - made button areas configurable - added mapping colors to data sets

--- a/themes/dohmh/layouts/key-topics/heatstory.html
+++ b/themes/dohmh/layouts/key-topics/heatstory.html
@@ -156,18 +156,25 @@
 
 <div id="wholeMap">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-4">
+      <div id="baseLayerButtons">
+        <h4 class="home-label">Study Area</h4>
+        <div id="buttonHolderStudyArea" style="display: inline-block"></div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
       <div id="baseLayerButtons">
         <h4 class="home-label">Choose data</h4>
         <div id="buttonHolderBase" style="display: inline-block"></div>
-    </div>
+      </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-4">
       <div id="baseLayerButtons" class="">
         <h4 class="home-label" class="text-align-right">Add layers</h4>
         <div id="buttonHolderAdditional" style="display: inline-block"></div>
-    </div>
+      </div>
     </div>
   </div>
 
