--- a/themes/dohmh/layouts/components.html
+++ b/themes/dohmh/layouts/components.html
@@ -118,8 +118,8 @@ Used as a subtle call-out box (data stories, data features) - think of this as *
 
 -->
 
-<div style="border-left: 5px solid lightgray; padding: 5px; font-size: 14px;">
-    <em><i class="fas fa-hands-helping text-center mr-1"></i>New Yorkers seeking support with their mental health can connect to trained counselors, for free and in over 200 languages, through 988. For 24/7 support, call or text 988. If you or someone you know is at immediate risk of hurting themselves, or in immediate danger, call 911. If you or someone you know is at immediate risk of hurting themselves, or in immediate danger, call 911.</em></div>
+<div class="asidebox">
+    <em><i class="fas fa-hands-helping text-center mr-1"></i>New Yorkers seeking support with their mental health can connect to trained counselors, for free and in over 200 languages, through 988. For 24/7 support, call or text 988. If you or someone you know is at immediate risk of hurting themselves, or in immediate danger, call 911.</em>
 </div>
 
 <!--
@@ -139,6 +139,7 @@ Left-Green-Border
     <li><a href="https://www.nyc.gov/site/doh/data/data-sets/air-quality-nyc-community-air-survey.page">New York Community Air Survey: past reports</a></li>
     </ul>
 </div>
+
 
 <!--
 Plain shadow cards.
