--- a/assets/scss/__portal-custom.scss
+++ b/assets/scss/__portal-custom.scss
@@ -1129,6 +1129,13 @@ th.tablehead {
     border-radius: 5px;
 }
 
+.asidebox {
+    border-left: 8px solid lightgray; 
+    padding: 8px; 
+    font-size: 14px;
+    background-color: #FBFBFB;
+}
+
 .no-bullets {
     padding-left: 0px;
     list-style-type:none;
