--- a/assets/scss/__portal-custom.scss
+++ b/assets/scss/__portal-custom.scss
@@ -1133,7 +1133,7 @@ th.tablehead {
     border-left: 8px solid lightgray; 
     padding: 8px; 
     font-size: 14px;
-    background-color: #FBFBFB;
+    background-color: #FBFBFB80;
 }
 
 .no-bullets {
